--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
   "scripts": {
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lite": "lite-server"
+    "lite": "lite-server",
+    "clean": "rimraf dist",
+    "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
+    "imagemin": "imagemin images/* --out-dir='dist/img'",
+    "usemin": "usemin eventos.html -d dist --htmlmin -o dist/eventos.html && usemin index.html -d dist --htmlmin -o dist/index.html && usemin oracion.html -d dist --htmlmin -o dist/oracion.html && usemin recursos.html -d dist --htmlmin -o dist/recursos.html",
+    "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run usemin"
+
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "lite-server": "^2.3.0",
+    "rimraf": "^2.6.2"
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
